crates/preprocessor/tests/snapshots/main__define_expansion_nested_3.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 614
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO BAR + 3
#define BAR 1 + 2
int foo = 1 + 2 + 3;

