crates/preprocessor/tests/snapshots/main__define_expansion_nested_4-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 545
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      14,
      15,
      14,
      15
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      18,
      25,
      18,
      25
    ],
    [
      26,
      29,
      26,
      29
    ],
    [
      30,
      33,
      30,
      33
    ],
    [
      34,
      35,
      34,
      35
    ],
    [
      36,
      37,
      36,
      37
    ],
    [
      38,
      39,
      38,
      39
    ],
    [
      40,
      41,
      40,
      41
    ],
    [
      42,
      45,
      42,
      45
    ],
    [
      46,
      49,
      46,
      49
    ],
    [
      50,
      51,
      50,
      51
    ],
    [
      55,
      56,
      65,
      66
    ]
  ],
  "expanded_symbols": []
}
