crates/preprocessor/tests/snapshots/main__define_trailing_comment_1-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 224
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      14,
      27,
      14,
      27
    ],
    [
      28,
      31,
      28,
      31
    ],
    [
      32,
      35,
      32,
      35
    ],
    [
      36,
      37,
      36,
      37
    ],
    [
      38,
      39,
      38,
      39
    ],
    [
      39,
      40,
      39,
      40
    ]
  ],
  "expanded_symbols": []
}
