crates/preprocessor/tests/snapshots/main__define_trailing_comment_3-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 237
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      15,
      12,
      15
    ],
    [
      16,
      37,
      16,
      37
    ],
    [
      38,
      56,
      38,
      56
    ],
    [
      90,
      90,
      61,
      61
    ]
  ],
  "expanded_symbols": []
}
