crates/preprocessor/tests/snapshots/main__define_trailing_comment_3.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 222
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO bar /**< documentation */
#include "file.sp"





