crates/preprocessor/tests/snapshots/main__define_undef_1-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 414
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      14,
      20,
      14,
      20
    ],
    [
      21,
      24,
      21,
      24
    ]
  ],
  "expanded_symbols": []
}
