crates/preprocessor/tests/snapshots/main__elseif_directive_expansion_1-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      53,
      56,
      17,
      20
    ],
    [
      57,
      60,
      21,
      24
    ],
    [
      60,
      61,
      24,
      25
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 18,
        "end": 21
      },
      "expanded_range": {
        "start": 18,
        "end": 21
      },
      "idx": 0,
      "file_id": 0
    },
    {
      "range": {
        "start": 44,
        "end": 47
      },
      "expanded_range": {
        "start": 44,
        "end": 47
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
